--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap");
+
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #f6761a;
+  font-family: "Poppins", sans-serif;
+  color: white;
+}
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.movie {
+  width: 300px;
+  margin: 1rem;
+  border-radius: 3px;
+  box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
+  background-color: #e1640a;
+  position: relative;
+  overflow: hidden;
+}
+.movie img {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+}
+.movie-info {
+  color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem 1rem;
+  letter-spacing: 0.5px;
+}
+.movie-overview {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: #e1640a;
+  background-color: #fff;
+  padding: 1rem;
+  max-height: 100%;
+  transform: translateY(101%);
+  transition: transform 0.3s ease-in;
+}
+.movie:hover .movie-overview {
+  transform: translateY(0);
+}
+.search {
+  background-color: transparent;
+  border: 2px solid white;
+  padding: 0.5rem 1rem;
+  border-radius: 50px;
+  font-size: 1.2rem;
+  color: #fff;
+  font-family: inherit;
+  margin-top: 10px;
+  outline: none;
+}
+.search::placeholder {
+  color: white;
+}
+header {
+  background-color: #e1640a;
+  padding: 1rem;
+}
+form {
+  display: flex;
+  justify-content: space-between;
+}
+h1 {
+  margin-top: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.movie-info span {
+  background-color: #eb9455;
+  padding: 0.25rem 0.5rem;
+  border-radius: 3px;
+  font-weight: bold;
+}
+.movie-info span.green {
+  color: lightgreen;
+}
+
+.movie-info span.orange {
+  color: blue;
+}
+
+.movie-info span.red {
+  color: red;
 }
